test if HEAD is pointed right

--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -90,7 +90,7 @@
     </div>
     <div class="w-col w-col-5">
       <h5><%= @viewer.title %></h5>
-      <p><em>"<%= @viewer.tagline %>"</em>
+      <p><em><%= @viewer.tagline %></em>
       </p>
     </div>
     <div class="w-col w-col-3"></div>
