--- a/app/views/viewers/index.html.erb
+++ b/app/views/viewers/index.html.erb
@@ -49,7 +49,7 @@
 <div id="new_viewer_form" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Nieuwe sollicitatie maken</h3>
+    <h3 id="myModalLabel">Nieuwe sollicitatie aanmaken</h3>
   </div>
   <div class="modal-body">
     <%= render partial: 'form' %>
