--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,14 +3,14 @@
     <div class="navbar-inner">
     	<div class="row">
   			<div class="span8 offset2">
-      		<%= link_to "Solliceo", root_path, class: "brand" %>
+      		<!-- <%= link_to "Solliceo", root_path, class: "brand" %>
       		<ul class="nav">
         		<li><%= link_to "Home", root_path %></li>
         		<li><%= link_to "About Us", about_path %></li>
-        	</ul>
+        	</ul> -->
         	<ul class="nav pull-right">
-            <li><%= link_to "Account", edit_user_registration_path %></li>	
-      		  <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+          <!--  <li><%= link_to "Account", edit_user_registration_path %></li>	 -->
+      		  <li><%= link_to "Uitloggen", destroy_user_session_path, method: :delete %></li>
       		</ul>
       	</div>
       </div>
