changes for joram launch

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>Welcome <%= @email %>!</p>
+<p>Welkom <%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>Klik op onderstaande link om je account te bevestigen:</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
+<p><%= link_to 'Bevestig mijn account', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
