--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
     	<div class="row-fluid">
       	<div class="span6 offset3">
           <p>
-	          <%= link_to "Solliceo", root_path %> wordt ontwikkeld door <a href="https://vimeo.com/groups/profeo">Loet Rammelsberg</a> en <a href="https://vimeo.com/groups/profeo">Pieter Moorman</a>.
+	          <%= link_to "Solliceo", root_path %> wordt ontwikkeld door <a href="mailto:loet@solliceo.com">Loet Rammelsberg</a> en <a href="mailto:pieter@solliceo.com">Pieter Moorman</a>.
 	          <br> 
 	          Voor meer informatie neem direct contact op met <a href="mailto:loet@solliceo.com">loet@solliceo.com</a>.
           </p>	     
@@ -12,8 +12,8 @@
 	          <li><%= link_to "Solliceo", root_path %></li>
 	          <li class="muted">&middot;</li>
 	          <li><a href="http://vicancy.com/" target="_blank">Vicancy</a></li>
-	          <li class="muted">&middot;</li>
-	          <li><a href="https://vimeo.com/groups/profeo/videos/66645854" target="_blank">Compeo</a></li>
+	        <!--  <li class="muted">&middot;</li>
+	          <li><a href="https://vimeo.com/groups/profeo/videos/66645854" target="_blank">Compeo</a></li> -->
 	        </ul>
       	</div>
     	</div>
@@ -26,15 +26,15 @@
  	 	<div class="container">
     	<div class="row-fluid">
       	<div class="span6 offset3">
-          <p><%= link_to "Solliceo", root_path %> wordt ontwikkeld door <a href="https://vimeo.com/groups/profeo">Loet Rammelsberg</a> 
-              en <a href="https://vimeo.com/groups/profeo">Pieter Moorman</a>.<br> Voor meer informatie 
+          <p><%= link_to "Solliceo", root_path %> wordt ontwikkeld door <a href="mailto:loet@solliceo.com">Loet Rammelsberg</a> 
+              en <a href="mailto:pieter@solliceo.com">Pieter Moorman</a>.<br> Voor meer informatie 
               neem direct contact op met <a href="mailto:loet@solliceo.com">loet@solliceo.com</a>.	     
 	        <ul class="footer-links">
 	          <li><%= link_to "Solliceo", root_path %></li>
 	          <li class="muted">&middot;</li>
 	          <li><a href="http://vicancy.com/" target="_blank">Vicancy</a></li>
-	          <li class="muted">&middot;</li>
-	          <li><a href="https://vimeo.com/groups/profeo/videos/66645854" target="_blank">Compeo</a></li>
+	      <!--    <li class="muted">&middot;</li>
+	          <li><a href="https://vimeo.com/groups/profeo/videos/66645854" target="_blank">Compeo</a></li> -->
 	        </ul>
       	</div>
     	</div>
