--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -4,14 +4,14 @@
         <div class="w-col w-col-4">
          <div class="w-clearfix dashboard login_form">
           <div class="dashboard-whitebox login_form">
-            <h2>Forgot your password?</h2>
+            <h3>Wachtwoord vergeten?</h3>
             <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), html: { :method => :post, class: 'form-horizontal'}) do |f| %>
               <%= f.error_notification %>
-            <h4>Email</h4>
+            <h4>Jouw email (om wachtwoord te wijzigen)</h4>
             <%= f.input :email, label: false, :required => true, :autofocus => true, input_html: { class: 'w-input' } %>
           </div>
           <%= link_to '<i class="icon-share-alt" style="margin-left:-5px; margin-top:-1px;"></i>'.html_safe, new_registration_path(resource_name), title: 'Nog geen account? >> Aanmaken', :class => "button button-secondary button-left button_tooltip", data: {toggle: 'modal', placement: 'bottom'} %>
-          <%= f.submit "Send", class: "button button-main login_button" %>
+          <%= f.submit "Verzenden", class: "button button-main login_button" %>
           <%= link_to '<i class="icon-hand-right" style="margin-left:-5px; margin-top:-1px;"></i>'.html_safe, new_session_path(resource_name), title: 'Ben je al gebruiker? >> Inloggen', :class => "button button-secondary button-right button_tooltip", data: {toggle: 'modal', placement: 'bottom'} %>
           <% end %>
         </div>
