--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,12 +9,12 @@
   <div class="form-inputs form-horizontal">
     <%= f.input :name, :required => true, :autofocus => true %> 
     <%= f.input :email, :required => true %>
-    <%= f.input :phone, label: "Phone number" %>
-    <%= f.input :linkedin, label: "LinkedIn account", placeholder: "paste your 'public profile' here" %>
-    <%= f.input :twitter, label: "Twitter account", placeholder: "example: @qieter" %>
-    <%= f.input :residence, label: "Residence city" %>
-    <%= f.input :image, label: "Upload a profile image" %>
-    <%= f.input :image_remote_url, label: "or enter a profile image URL" %>    
+    <%= f.input :phone, label: "Telefoon" %>
+    <%= f.input :linkedin, label: "LinkedIn account", placeholder: "Plaats je 'public profile' hier" %>
+    <%= f.input :twitter, label: "Twitter account", placeholder: "bijv. @qieter" %>
+    <%= f.input :residence, label: "Woonplaats" %>
+    <%= f.input :image, label: "Upload een profielfoto" %>
+    <%= f.input :image_remote_url, label: "of gebruik een URL naar je profielfoto" %>    
   </div>
 
   <div style="margin-bottom: 50px;">
@@ -29,7 +29,7 @@
       <% end %>
 
       <h4>Change password</h4>
-      <%= f.input :password, label: "new password", :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
+      <%= f.input :password, label: "nieuw wachtwoord", :autocomplete => "uit", :hint => "leave it blank if you dlaat open als je dit niet wilt wijzigen", :required => false %>
       <%= f.input :password_confirmation, :required => false %>
     </div>
   </div>
@@ -41,9 +41,9 @@
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
+<p>Unhappy? <%= link_to "Verwijder mijn account", registration_path(resource_name), :data => { :confirm => "Weet je het zeker?" }, :method => :delete %>.</p>
 
-<%= link_to "Back", :back %>
+<%= link_to "Terug", :back %>
 
 </div>
 </div>
