fix typos in reset password mailer

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,6 +1,6 @@
 <p>Hallo <%= @resource.email %>!</p>
 
-<p>Je ontvangt deze mail om je wachtwoord te wijzigen. Dit door op de link hieronder te klikken.</p>
+<p>Je ontvangt deze mail om je wachtwoord te wijzigen. Doe dit door op de link hieronder te klikken.</p>
 
 <p><%= link_to 'Wijzig mijn wachtwoord', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
