--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- this is the application.html.erb layout file -->
   <title>Solliceo</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag    "platform", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= yield :meta %>
 </head>
 <body>
-	<%= render 'layouts/header' %>
 	
 	<div class="container">	
 		<div class="row">
