--- a/app/assets/stylesheets/pages.css.sass
+++ b/app/assets/stylesheets/pages.css.sass
@@ -1,9 +1,12 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-#videowizard_questionnaire{
-  width: 100%;
-  height: 3950px;
-  border: none;
-  overflow: hidden;
-}
+
+@import bootstrap
+@import bootstrap-responsive
+
+#videowizard_questionnaire
+  width: 100%
+  height: 3950px
+  border: none
+  overflow: hidden
