--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,20 +1,8 @@
-<% if user_signed_in? %>
-  <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-    	<div class="row">
-  			<div class="span8 offset2">
-      		<!-- <%= link_to "Solliceo", root_path, class: "brand" %>
-      		<ul class="nav">
-        		<li><%= link_to "Home", root_path %></li>
-        		<li><%= link_to "About Us", about_path %></li>
-        	</ul> -->
-        	<ul class="nav pull-right">
-          <!--  <li><%= link_to "Account", edit_user_registration_path %></li>	 -->
-      		  <li><%= link_to "Uitloggen", destroy_user_session_path, method: :delete %></li>
-      		</ul>
-      	</div>
-      </div>
-    </div>
+<!-- navbar top right -->
+  <div class="navigation">
+    <ul class="pull-right inline">
+      <li><%= link_to 'Account', '#user_edit_form', class: 'button_tooltip', title: 'Bewerk je Account', data: {toggle: 'modal', placement: 'bottom', resource: current_user, resource_name: current_user} %></li>
+      <li class="muted">&middot;</li>
+      <li><%= link_to "Uitloggen", destroy_user_session_path, method: :delete %></li>
+    </ul>
   </div>
-<% else # don't show header, because they visit the qurriculums! %>
-<% end %>
