--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- this is the dashboard.html.erb layout file -->
   <meta charset="utf-8">
   <title>My Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag    "platform", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= yield :meta %>
 
-  <link rel="stylesheet" type="text/css" href="http://www.vicancy.com/solliceo/dashboarddesign/css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="http://www.vicancy.com/solliceo/dashboarddesign/css/webflow.css">
-  <link rel="stylesheet" type="text/css" href="http://www.vicancy.com/solliceo/dashboarddesign/css/solliceodashboard.webflow.css">
-
-  <style>
-  	a {
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: none;
-      color: white;
-    }
-  </style>
 </head>
 <body>
-	
+
+  <% if user_signed_in? %>
+    <%= render 'layouts/header' %>
+  <% end %>
+
 	<div class="row">
 		<div class="span8 offset2">
 			<% flash.each do |name, msg| %>
@@ -32,12 +25,8 @@
 			<% end %>
 		</div>
 	</div>	
-
-
 	
-   <%= yield %>
-  
-
+  <%= yield %>
 
 	<%= render 'layouts/footer' %>
 
