--- a/app/views/layouts/viewer.html.erb
+++ b/app/views/layouts/viewer.html.erb
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- this is the viewer.html.erb layout file -->
   <title>My Viewer for (...import company name)</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag    "viewer", :media => "all" %>
+  
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= yield :meta %>
