move image back to vicancy.com

--- a/app/assets/stylesheets/platform.css.sass
+++ b/app/assets/stylesheets/platform.css.sass
@@ -4,7 +4,7 @@
 
 body
 	background-color: white
-	background-image: image-url("escheresque.png")
+	background-image: url('http://www.vicancy.com/solliceo/dashboarddesign/images/escheresque.png')
 	font-family: Tahoma, Geneva, sans-serif
 	color: #333
 	font-size: 12px
