add overlay instructions

--- a/app/assets/stylesheets/platform.css.sass
+++ b/app/assets/stylesheets/platform.css.sass
@@ -1,6 +1,9 @@
+@import application
 @import bootstrap
 @import bootstrap-responsive
+@import chardinjs
 @import webflow
+
 
 body
 	background-color: white
