--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= stylesheet_link_tag    "platform", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "platform" %>
   <%= csrf_meta_tags %>
   <%= yield :meta %>
 </head>
