--- a/app/views/layouts/salespage.html.erb
+++ b/app/views/layouts/salespage.html.erb
@@ -9,6 +9,7 @@
   <%= stylesheet_link_tag    "platform", :media => "all" %>
   <%= stylesheet_link_tag    "salespage", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "salespage" %>
   <%= csrf_meta_tags %>
   <%= yield :meta %>
 
