--- a/app/views/layouts/viewer.html.erb
+++ b/app/views/layouts/viewer.html.erb
@@ -7,6 +7,7 @@
   <%= stylesheet_link_tag    "viewer", :media => "all" %>
   
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "viewers" %>
   <%= csrf_meta_tags %>
   <%= yield :meta %>
 
