add font awesome to viewer

--- a/app/assets/stylesheets/viewer.css.sass
+++ b/app/assets/stylesheets/viewer.css.sass
@@ -2,6 +2,7 @@
 @import bootstrap
 @import bootstrap-responsive
 @import bootstrap-wysihtml5
+@import font-awesome
 @import webflow
 
 *
@@ -151,6 +152,12 @@ body
 			border-bottom: 1px solid #bbb
 			background-color: white
 			box-shadow: #bbbbbb 0px 6px 6px -4px
+			i //icons
+				margin-right: 10px
+				font-size: 1.3em
+				color: #777
+			a
+				color: #333
 		.video-section
 			padding: 25px
 			border-style: solid
