add default profile image

--- a/app/assets/stylesheets/viewer.css.sass
+++ b/app/assets/stylesheets/viewer.css.sass
@@ -140,6 +140,7 @@ body
 						margin-bottom: 0px
 						padding-bottom: 0px
 						border-radius: 3px
+						height: 150px
 					img
 						max-width: 100%
 						vertical-align: middle
