add edit_button to viewer

--- a/app/assets/stylesheets/viewer.css.sass
+++ b/app/assets/stylesheets/viewer.css.sass
@@ -169,7 +169,7 @@ body
 				width: 100%
 				position: relative
 				padding: 0
-				iframe, object, embed
+				iframe, img, object, embed
 					position: absolute
 					top: 0
 					left: 0
@@ -243,3 +243,9 @@ body
 .tab-content
 	background: #FFF
 	padding: 10px 0px
+
+.edit_area
+	.edit_button
+		position: absolute
+		top: 10px
+		left: 10px
